# my-portfolio

backend/: .gitignore  .gitigone  db.sqlite3  pyproject.toml
backend/core/: settings.py  urls.py
backend/projects/: admin.py  manager.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py
